--- a/src/index.css
+++ b/src/index.css
@@ -112,7 +112,7 @@ img {
   font-size: var(--small-font-size);
   color: var(--first-color-darken);
   text-align: center;
-  font-weight: bar(--font-bold);
+  font-weight: var(--font-bold);
   margin-bottom: 0.25rem;
 }
 
