--- a/src/app/views/skills/skills-view.css
+++ b/src/app/views/skills/skills-view.css
@@ -28,3 +28,9 @@
   height: 0.25rem;
   background-color: var(--first-color);
 }
+
+@media screen and (min-width: 768px) {
+  .skills__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
