--- a/src/app/header/header.css
+++ b/src/app/header/header.css
@@ -1,5 +1,15 @@
 @import "index.css";
 
+.l-header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: var(--z-fixed);
+  background-color: var(--first-color-lighten);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
 .nav {
   height: var(--header-height);
   display: flex;
@@ -57,4 +67,10 @@
 
 .active {
   color: var(--text-color);
+}
+
+@media screen and (min-width: 768px) {
+  .nav__menu {
+    width: var(--nav-width);
+  }
 }
