--- a/src/app/views/education/education-view.css
+++ b/src/app/views/education/education-view.css
@@ -57,3 +57,9 @@
   background-color: var(--first-color);
   transform: translate(5px, -4px);
 }
+
+@media screen and (min-width: 768px) {
+  .education__time {
+    padding: 0 2rem;
+  }
+}
