--- a/src/app/views/projects/projects-view.css
+++ b/src/app/views/projects/projects-view.css
@@ -43,3 +43,9 @@
   font-size: var(--h2--font-size);
   color: var(--first-color-lighten);
 }
+
+@media screen and (min-width: 768px) {
+  .projects__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
