--- a/src/app/views/contact-me/contact-me-view.css
+++ b/src/app/views/contact-me/contact-me-view.css
@@ -44,6 +44,10 @@
   padding-left: 1rem;
 }
 
+.contact__message {
+  resize: none;
+}
+
 @media screen and (min-width: 768px) {
   .contact__container {
     display: flex;
