--- a/src/app/views/home/home-view.css
+++ b/src/app/views/home/home-view.css
@@ -65,8 +65,15 @@
   width: 100%;
 }
 
+/*==== MEDIA QUERIES ====*/
 @media screen and (min-width: 768px) {
   .home__button {
     width: initial;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .home__container {
+    height: 100vh;
   }
 }
