--- a/src/app/views/projects/projects-view.css
+++ b/src/app/views/projects/projects-view.css
@@ -44,8 +44,15 @@
   color: var(--first-color-lighten);
 }
 
+/*==== MEDIA QUERIES ====*/
 @media screen and (min-width: 768px) {
   .projects__container {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .projects__container {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
