--- a/src/app/views/services/services-view.css
+++ b/src/app/views/services/services-view.css
@@ -50,8 +50,15 @@
   color: var(--first-color-lighten);
 }
 
+/*==== MEDIA QUERIES ====*/
 @media screen and (min-width: 768px) {
   .services__container {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .services__container {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
