--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,10 @@
   --font-bold: 700;
 
   /*==== Colors ====*/
-  --first-color: #cc4b2c;
-  --first-color-dark: #662616;
-  --first-color-darken: #290f09;
-  --text-color: #54423d;
+  --first-color: #1565c0;
+  --first-color-dark: #0d47a1;
+  --first-color-darken: #1a237e;
+  --text-color: #1976d2;
   --first-color-light: #eae7e6;
   --first-color-lighten: #fffafa;
 
